--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/png" href="/assets/BMB-FAVICON-196.png"/>
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <title>{{ title }}</title>
