--- a/public/style 2.css
+++ b/public/style 2.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Averia+Gruesa+Libre&family=Hind+Siliguri&family=Paytone+One&display=swap');
-
 :root {
   --fs-300: 0.9375rem;
   --fs-400: 1.0625rem;
@@ -7,18 +5,17 @@
   --fs-600: 1.875rem;
   --fs-700: 2rem;
 
-  --ff-body: "Hind Siliguri", sans-serif;
-  --ff-subheading: "Averia Gruesa Libre", cursive;
-  --ff-heading: "Paytone One", sans-serif;
+  --ff-body: "Roboto", sans-serif;
+  --ff-heading: "Playfair Display", serif;
 
   --fw-400: 400;
   --fw-700: 700;
   --fw-900: 900;
 
-  --clr-primary-200: hsla(16, 50%, 97%, 1);
-  --clr-primary-300: hsla(16, 100%, 50%, 1);
-  --clr-primary-400: hsla(16, 100%, 39%, 1);
-  --clr-primary-500: hsla(16, 100%, 15%, 1);
+  --clr-primary-200: hsla(169, 70%, 95%, 1);
+  --clr-primary-300: hsla(169, 100%, 39%, 1);
+  --clr-primary-400: hsla(169, 100%, 26%, 1);
+  --clr-primary-500: hsla(169, 100%, 16%, 1);
 
   --clr-neutral-100: hsla(0, 0%, 100%, 1);
   --clr-neutral-300: hsla(0, 0%, 50%, 1);
@@ -179,7 +176,7 @@ section,
   text-align: center;
 }
 
-/* typography */
+/* typgraphy */
 
 .article-title,
 .section-title {
@@ -192,13 +189,6 @@ section,
 
 .section-title {
   font-size: var(--fs-600);
-}
-
-.subheading {
-  font-family: var(--ff-subheading);
-  font-weight: var(--fw-700);
-  font-size: var(--fs-500);
-  line-height: 1.1;
 }
 
 
