--- a/src/_includes/article-snippet.njk
+++ b/src/_includes/article-snippet.njk
@@ -4,6 +4,6 @@
     <h3 class="snippet__title"><a href="{{post.url}}">{{ post.data.title }}</a></h3>
     <p class="snippet__meta">par <span>{{post.data.author}}</span> le <span>{{ post.date | postDate }}</span></p>
     <p class="snippet__body">{{post.data.description}}</p> 
-    <a href="{{post.url}}" class="btn btn--primary">Continue Reading</a>
+    <a href="{{post.url}}" class="btn btn--primary">Lire la suite...</a>
   </article>
 </li>
